--- a/src/Presentation/HttpFunction/HttpFunction.csproj
+++ b/src/Presentation/HttpFunction/HttpFunction.csproj
@@ -4,8 +4,14 @@
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Storage.Queue" Version="11.0.0" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="3.0.6" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.8" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.29" />
+    <PackageReference Include="Microsoft.WindowsAzure.ConfigurationManager" Version="3.2.3" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\FunctionsTest.Domain\FunctionsTest.Domain.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
