--- a/src/Domain/FunctionsTest.Domain/FunctionsTest.Domain.csproj
+++ b/src/Domain/FunctionsTest.Domain/FunctionsTest.Domain.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
+    <PackageReference Include="Microsoft.Azure.Storage.Queue" Version="11.0.1" />
+    <PackageReference Include="MongoDB.Driver" Version="2.9.1" />
   </ItemGroup>
 
 </Project>
