--- a/src/Application/FunctionsTest.Application/FunctionsTest.Application.csproj
+++ b/src/Application/FunctionsTest.Application/FunctionsTest.Application.csproj
@@ -1,12 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
-
   <ItemGroup>
-    <Folder Include="QueueData\Handlers\" />
-    <Folder Include="QueueData\Validators\" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.8" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.30-beta1" />
   </ItemGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\FunctionsTest.Domain\FunctionsTest.Domain.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="host.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="local.settings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+    </None>
+  </ItemGroup>
 </Project>
