--- a/src/Presentation/FunctionsTest.Presentation/FunctionsTest.Presentation.csproj
+++ b/src/Presentation/FunctionsTest.Presentation/FunctionsTest.Presentation.csproj
@@ -4,8 +4,13 @@
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="3.0.3" />
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.29" />
+    <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="2.0.0-preview" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.8" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.30-beta1" />
+    <PackageReference Include="Microsoft.WindowsAzure.ConfigurationManager" Version="3.2.3" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\FunctionsTest.Domain\FunctionsTest.Domain.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
