--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,97 +1,46 @@
 version: "3.7"
 
 services: 
-  azurite:
-    image: mcr.microsoft.com/azure-storage/azurite:latest
-    entrypoint: azurite -l /workspace -d /workspace/debug.log --blobHost 0.0.0.0 --queueHost 0.0.0.0
-    volumes:
-      - d:/azure/azurite:/workspace
-    expose:
-      - 10000
-      - 10001
+  application:
+    image: functionstest-application
+    depends_on:
+      - azurite
+      - mongo
+    build:
+      context: ./src
+      dockerfile: ./application/functionstest.application/dockerfile
     ports:
-      - "10000:10000"
-      - "10001:10001"
-    
-  mongo:
-    image: mongo
-    expose:
-      - 27017
-    ports:
-      - "27017:27017"
+      - "7072:80"
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=P4ssword!
+      - AzureWebJobsStorage=DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://azurite:10000/devstoreaccount1;QueueEndpoint=http://azurite:10001/devstoreaccount1;
+      - functions_worker_runtime=dotnet
 
+  persistence:
+    image: functionstest-persistence
+    depends_on:
+      - azurite
+      - mongo
+    build:
+      context: ./src
+      dockerfile: ./persistence/functionstest.persistence/dockerfile
+    ports:
+      - "7073:80"
+    environment:
+      - MongoDatabaseName=FunctionsTest
+      - MongoConnectionString=mongodb://root:P4ssword!@mongo:27017
+      - AzureWebJobsStorage=DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://azurite:10000/devstoreaccount1;QueueEndpoint=http://azurite:10001/devstoreaccount1;
+      - functions_worker_runtime=dotnet
 
-# 
-# This KIND OF works? Like, the functions load, but I can't seem to get them to fire.  Not sure wtf is going on.
-#
-#  application:
-#    image: functionstest-application
-#    build:
-#      context: ./src
-#      dockerfile: ./Application/FunctionsTest.Application/dockerfile
-#    ports:
-#      - "7072:80"
-#    environment:
-#      - AzureWebJobsStorage=DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://azurite:10000/devstoreaccount1;QueueEndpoint=http://azurite:10001/devstoreaccount1;
-#      - FUNCTIONS_WORKER_RUNTIME=dotnet
-#
-#  persistence:
-#    image: functionstest-persistence
-#    build:
-#      context: ./src
-#      dockerfile: ./Persistence/FunctionsTest.Persistence/dockerfile
-#    ports:
-#      - "7073:80"
-#    environment:
-#      - MongoDatabaseName=FunctionsTest
-#      - MongoConnectionString=mongodb://root:P4ssword!@mongo:27017
-#      - AzureWebJobsStorage=DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://azurite:10000/devstoreaccount1;QueueEndpoint=http://azurite:10001/devstoreaccount1;
-#      - FUNCTIONS_WORKER_RUNTIME=dotnet
-#
-#  presentation:
-#    image: functionstest-presentation
-#    build:
-#      context: ./src
-#      dockerfile: ./Presentation/FunctionsTest.Presentation/dockerfile
-#    ports:
-#      - "7071:80"
-#    environment:
-#      - AzureWebJobsStorage=DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://azurite:10000/devstoreaccount1;QueueEndpoint=http://azurite:10001/devstoreaccount1;
-#      - FUNCTIONS_WORKER_RUNTIME=dotnet
-
-# I wanted this to work, but it only works with windows containers
-# You need to use this download link instead to download a local windows emulator....
-# https://aka.ms/cosmosdb-emulator
-#  cosmos:
-#    image: mcr.microsoft.com/cosmosdb/windows/azure-cosmos-emulator
-#    expose:
-#      - 8081
-#      - 8900
-#      - 8901
-#      - 8902
-#      - 10250
-#      - 10251
-#      - 10252
-#      - 10253
-#      - 10254
-#      - 10255
-#      - 10256
-#      - 10350
-#    ports:
-#      - "8081:8081" 
-#      - "8900:8900" 
-#      - "8901:8901" 
-#      - "8902:8902" 
-#      - "10250:10250" 
-#      - "10251:10251" 
-#      - "10252:10252" 
-#      - "10253:10253" 
-#      - "10254:10254" 
-#      - "10255:10255" 
-#      - "10256:10256" 
-#      - "10350:10350"
-#    volumes:
-#      - d:/azure/cosmos:c:\CosmosDBEmulator\CosmosDBEmulatorCert
+  presentation:
+    image: functionstest-presentation
+    depends_on:
+      - azurite
+      - mongo
+    build:
+      context: ./src
+      dockerfile: ./Presentation/FunctionsTest.Presentation/dockerfile
+    ports:
+      - "7071:80"
+    environment:
+      - AzureWebJobsStorage=DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://azurite:10000/devstoreaccount1;QueueEndpoint=http://azurite:10001/devstoreaccount1;
+      - FUNCTIONS_WORKER_RUNTIME=dotnet
