--- a/src/Presentation/FunctionsTest.Nuxt/package.json
+++ b/src/Presentation/FunctionsTest.Nuxt/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@nuxt/typescript-build": "^0.2.10",
     "@nuxtjs/axios": "^5.3.6",
-    "ant-design-vue": "^1.1.10",
     "nuxt": "^2.0.0",
     "nuxt-property-decorator": "^2.4.0"
   },
@@ -21,6 +20,7 @@
     "@nuxtjs/eslint-config-typescript": "^0.1.3",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "tslint-config-prettier": "^1.18.0"
   }
 }
